--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,10 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - labiybafakh
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - labiybafakh/OrnibiBot
+  - labiybafakh/OrnibiBotMicro
+  - labiybafakh/WRS2023
+  - labiybafakh/leptrino_force_torque_sensor
+  - labiybafakh/FuzzyBicyclePathTracking
+  - labiybafakh/vectornav-ros
