--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,98 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Muhammad Labiyb Afakh
+    # - name: Date of Birth
+    #   value: 14th March 1879
     - name: Languages
-      value: English, German
+      value: Indonesian, English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD Student
+      institution: Tokyo Metropolitan University
+      year: 2021 Sept - now
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Supervised by Professor Naoyuki Takesue.
+
+    - title: Master of Engineering
+      institution: Tokyo Metropolitan University
+      year: 2019 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Supervised by Professor Naoyuki Takesue.
+        - title: Relevant Courses
+          contents: Robotic System Design, Intelligent Robot, Ubiquitous Robotics.
+
+    - title: Bachlor of Computer Engineering  
+      institution: Electronic Engineering Polytechnic Institute of Surabaya
+      year: 2014 - 2018
+      description:
+        - title: Relevant Courses
+          contents: Embedded System, Robot System Control, Computer Vision, Intelligent System, Robotic and Automation, and Real Time Operating System.
+        #   -
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title:       FS-SPRING Research Fellow
+      institution: Tokyo Metropolitan University
+      year: 2023 Apr - now
+
+    - title: Research and Development Engineer (Part-Time)
+      institution: Shanghai Micro Ears Ingeniousness Intelligent Technology Co., Ltd
+      year: 2022 - 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Design and manufacture some components of the robot.
+        - Build the software for the embedded system.
+        - Build a data acquisition system with graphical user interface(GUI) via serial communication in a low-latency.
+
+    - title: Research Assistant (Part-Time)
+      institution: Tokyo Metropolitan University
+      year: 2021 - 2023
+
+    - title: Freelance Robotics and Embedded System Engineer
+      # institution: Karl-Ferdinand University, Prague, Czechoslovakia
+      year: 2018 - 2019
       description:
-        - Description 1.
-        - Description 2.
+        - Built an embedded system for solar tracker to move the solar panel by given position that sent from base-station.
+        - Built a small-device for weighting system for gas company.
+        - Built embedded system system for pull and press machine including monitoring of the pressure.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2016
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - Second Runner Up of ABU Robocon 2016.
+        - Winner of ABU Robocon of Indonesian.
+    - year: 2019
       items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Runner Up Toilet Cleaning Robot Category, World Robot Summit FSCS Trial Competition
+    - year: 2023
       items:
-        - Description 1.
-        - Description 2.
+        - Second Runner-up Customer Interaction Task Category, World Robot Summit FCSC @IFAC
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
