--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -8,7 +8,7 @@
     # - name: Date of Birth
     #   value: 14th March 1879
     - name: Languages
-      value: Indonesian, English
+      value: Indonesian, English, Japanese(Beginner)
 
 - title: Education
   type: time_table
@@ -39,7 +39,7 @@
   type: time_table
   contents:
     - title: Technical Skills
-      description: CAD, CAM, EDA, C, C++, Python(PyTorch), Rust, ROS1/ROS2
+      description: CAD, CAM, EDA, C, C++, Python(PyTorch), Rust, ROS1/ROS2, CI (Github Actions)
     - title: Languages
       description: Indonesian, English
 
@@ -56,7 +56,7 @@
       description:
         - Design and manufacture some components of the robot.
         - Build the software for the embedded system.
-        - Build a data acquisition system with graphical user interface(GUI) via serial communication in a low-latency.
+        - Build and optimize serial communication and vizualise the data on GUI in 200Hz sampling.
 
     - title: Research Assistant (Part-Time)
       institution: Tokyo Metropolitan University
